--- a/aboutme.html
+++ b/aboutme.html
@@ -18,10 +18,10 @@ h1 {color:blue}
 <title>
   Welcome!
 </title>
-<font size="4" face="comic sans ms" color="indigo">
+<font size="4" face="comic sans ms" color="indigo"> 
   Hi there! My name is Manisha. This coming September, I will be a senior and to be honest, I'm not excited about college with the whole application process and whatnot.
 <div>
-  Hopefully, I survive and get into my choice college! &#9786
+  Hopefully, I survive and get into my choice college! 
 </div>
 <div>
 <p>
