--- a/artwork.html
+++ b/artwork.html
@@ -2,12 +2,13 @@
 <head>
 <style>
 div {
-    width: 200px;
-    margin: 25px;
+    background-color: yellow;
+    width: 1000px;
+    margin: 10px;
 }
 </style>
 </head>
 <body>
 
-<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+<div>My Artwork!</div>
 
