--- a/artwork.html
+++ b/artwork.html
@@ -2,8 +2,9 @@
 <head>
 <style>
 div {
-    width: 1000px;
-    margin: 10px;
+    background-color: light blue;
+    width: 1500px;
+    margin: 20px;
 }
 </style>
 </head>
