--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@ h1 {color:blue}
 <b><u>Hobbies/Interests:</b></u>
 <ul style="list-style-type:square">
   <li>Drawing/Painting</li>
-<button onclick="https://mfnu24.github.io/portfolio/artwork.html">Click to see some of my artwork!</button>
+<a href="https://mfnu24.github.io/portfolio/artwork.html" class="button">Link</a>
   <li>Swimming</li>
   <li>Reading</li>
   <li>Listening to Music</li>
