--- a/aboutme.html
+++ b/aboutme.html
@@ -45,8 +45,9 @@ h1 {color:blue}
 <b><u>Hobbies/Interests:</b></u>
 <ul style="list-style-type:square">
   <li>Drawing/Painting</li>
-<a href="https://mfnu24.github.io/portfolio/artwork.html" class="button">Link</a>
-  <li>Swimming</li>
+<form>
+    <button type="submit" formaction="https://mfnu24.github.io/portfolio/artwork.html">Link</button>
+</form>  <li>Swimming</li>
   <li>Reading</li>
   <li>Listening to Music</li>
   <li>Watching Youtube/Netflix</li>
