--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@ h1 {color:blue}
 <ul style="list-style-type:square">
   <li>Drawing/Painting</li>
 <form>
-    <button formaction="https://mfnu24.github.io/portfolio/artwork.html">Link</button>
+    <button formaction="https://mfnu24.github.io/portfolio/artwork.html">Click here to see some of my artwork!</button>
 </form>  <li>Swimming</li>
   <li>Reading</li>
   <li>Listening to Music</li>
