--- a/artwork.html
+++ b/artwork.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 div {
-    background-color: '#5DADE2'";
+    background-color: "#5DADE2";
     width: 1200px;
     margin: 30px;
 }
