--- a/artwork.html
+++ b/artwork.html
@@ -15,4 +15,5 @@ div {
     <form>
     <button formaction="https://mfnu24.github.io/portfolio/aboutme.html">Click here to go back!</button>
 </form> 
+    </body>
 
