--- a/sunset.html
+++ b/sunset.html
@@ -4,6 +4,15 @@
   <title>
     When's the ...?
   </title>
+	  <header>
+    <center>
+      <font face="copper black">
+        <h1 onmouseover="this.style.color='#900C3F'">About Me!</h1>
+    <h1>
+  </h1>
+</font>
+    </center>
+  </header>
 <script src = "demo.js"> </script>
     <title>Sunrise</title>
 </head>
