--- a/country.html
+++ b/country.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<script src="codealong2.js" type="text/javascript"></script>
+	<script src="cdemo.js" type="text/javascript"></script>
 	<title>Country Information</title>
 </head>
 
