--- a/artwork.html
+++ b/artwork.html
@@ -11,7 +11,15 @@ div {
 <body>
 
 <div>My Artwork!</div>
-    
+    <center>
+<img src="IMG-2896.jpg" alt="P1" width="300" height="200">
+</center>
+    <center>
+<img src="IMG-2897.jpg" alt="P2" width="300" height="200">
+</center>
+    <center>
+<img src="IMG-2898.jpg" alt="P3" width="300" height="200">
+</center>
     <form>
     <button formaction="https://mfnu24.github.io/portfolio/aboutme.html">Click here to go back!</button>
 </form> 
