--- a/artwork.html
+++ b/artwork.html
@@ -12,13 +12,13 @@ div {
 
 <div>My Artwork!</div>
     <center>
-<img src="IMG-2896.jpg" alt="P1" width="300" height="200">
+<img src="IMG-2896.JPG" alt="P1" width="300" height="200">
 </center>
     <center>
-<img src="IMG-2897.jpg" alt="P2" width="300" height="200">
+<img src="IMG-2897.JPG" alt="P2" width="300" height="200">
 </center>
     <center>
-<img src="IMG-2898.jpg" alt="P3" width="300" height="200">
+<img src="IMG-2898.JPG" alt="P3" width="300" height="200">
 </center>
     <form>
     <button formaction="https://mfnu24.github.io/portfolio/aboutme.html">Click here to go back!</button>
