--- a/artwork.html
+++ b/artwork.html
@@ -9,16 +9,17 @@ div {
 </style>
 </head>
 <body>
-
+<font face="courgette">
+    </font>
 <div>My Artwork!</div>
     <center>
-<img src="IMG-2896.JPG" alt="P1" width="300" height="200">
+<img src="IMG-2896.JPG">
 </center>
     <center>
-<img src="IMG-2897.JPG" alt="P2" width="300" height="200">
+<img src="IMG-2897.JPG">
 </center>
     <center>
-<img src="IMG-2898.JPG" alt="P3" width="300" height="200">
+<img src="IMG-2898.JPG">
 </center>
     <form>
     <button formaction="https://mfnu24.github.io/portfolio/aboutme.html">Click here to go back!</button>
