--- a/artwork.html
+++ b/artwork.html
@@ -9,7 +9,9 @@ div {
 </style>
 </head>
 <body>
-<font face="courgette">
+<style>
+@import url('https://fonts.googleapis.com/css?family=Courgette');
+</style>
     </font>
 <div>My Artwork!</div>
     <center>
