--- a/artwork.html
+++ b/artwork.html
@@ -9,19 +9,16 @@ div {
 </style>
 </head>
 <body>
-<style>
-@import url('https://fonts.googleapis.com/css?family=Courgette');
-</style>
     </font>
 <div>My Artwork!</div>
     <center>
-<img src="IMG-2896.JPG">
+<img src="IMG-2896.JPG" width="300" height="200">
 </center>
     <center>
-<img src="IMG-2897.JPG">
+<img src="IMG-2897.JPG" width="300" height="200">
 </center>
     <center>
-<img src="IMG-2898.JPG">
+<img src="IMG-2898.JPG" width="300" height="200">
 </center>
     <form>
     <button formaction="https://mfnu24.github.io/portfolio/aboutme.html">Click here to go back!</button>
