--- a/artwork.html
+++ b/artwork.html
@@ -1,6 +1,15 @@
 <html>
 <head>
 <style>
+     <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
+    <style>
+      body {
+        font-family: 'Tangerine', serif;
+        font-size: 48px;
+      }
+    </style>
+  </head>
 div {
     background-color: blue;
     width: 1200px;
