--- a/artwork.html
+++ b/artwork.html
@@ -1,23 +1,14 @@
 <html>
 <head>
 <style>
-     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Tangerine">
-    <style>
-      body {
-        font-family: 'Tangerine', serif;
-        font-size: 48px;
-      }
-    </style>
-  </head>
 div {
-    background-color: blue;
+    background-color: pink;
     width: 1200px;
     margin: 30px;
 }
 </style>
 </head>
-<body>
+<body bgcolor="#98F4CD">
     </font>
 <div>My Artwork!</div>
     <center>
