--- a/artwork.html
+++ b/artwork.html
@@ -2,13 +2,13 @@
 <head>
 <style>
 div {
-    background-color: pink;
+    background-color: yellow;
     width: 1200px;
     margin: 30px;
 }
 </style>
 </head>
-<body bgcolor="#98F4CD">
+<body bgcolor=" #99ffcc">
     </font>
 <div>My Artwork!</div>
     <center>
