--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
 h1 {color:blue}
 </style>
 </head>
-<body bgcolor="#ffff99">
+<body background="flowerss.jpg">
 <title>
   Welcome!
 </title>
@@ -61,3 +61,5 @@ h1 {color:blue}
 </size>
 </body>
 </html>
+
+<!-- bgcolor="#ffff99"
