--- a/artwork.html
+++ b/artwork.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 div {
-    background-color: yellow;
+    background-color: pink;
     width: 1200px;
     margin: 30px;
 }
@@ -10,15 +10,15 @@ div {
 </head>
 <body bgcolor=" #99ffcc">
     </font>
-<div>My Artwork!</div>
+<center><div>My Artwork!</div><center>
     <center>
-<img src="IMG-2896.JPG" width="300" height="200">
+<img src="IMG-2896.JPG" width="300" height="200" hspace="20">
 </center>
     <center>
-<img src="IMG-2897.JPG" width="300" height="200">
+<img src="IMG-2897.JPG" width="300" height="200" hspace="20">
 </center>
     <center>
-<img src="IMG-2898.JPG" width="300" height="200">
+<img src="IMG-2898.JPG" width="300" height="200" hspace="20">
 </center>
     <form>
     <button formaction="https://mfnu24.github.io/portfolio/aboutme.html">Click here to go back!</button>
