--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
 h1 {color:blue}
 </style>
 </head>
-<body background="flowerss.jpg">
+<body bgcolor="#ffff99">
 <title>
   Welcome!
 </title>
@@ -62,4 +62,4 @@ h1 {color:blue}
 </body>
 </html>
 
-<!-- bgcolor="#ffff99"
+<!-- bgcolor="#ffff99" // background="flowerss.jpg"
