--- a/artwork.html
+++ b/artwork.html
@@ -4,13 +4,13 @@
 div {
     background-color: pink;
     width: 1200px;
-    margin: 30px;
+    margin: 50px;
 }
 </style>
 </head>
 <body bgcolor=" #99ffcc">
     </font>
-<center><div>My Artwork!</div><center>
+    <center><h1><div>My Artwork!</div></h1></center>
     <center>
 <img src="IMG-2896.JPG" width="300" height="200" hspace="20">
 </center>
