--- a/artwork.html
+++ b/artwork.html
@@ -12,13 +12,13 @@ div {
     </font>
     <center><h1><div>My Artwork!</div></h1></center>
     <center>
-<img src="IMG-2896.JPG" width="300" height="200" hspace="20">
+<img src="IMG-2896.JPG" width="300" height="200" hspace="50">
 </center>
     <center>
-<img src="IMG-2897.JPG" width="300" height="200" hspace="20">
+<img src="IMG-2897.JPG" width="300" height="200" hspace=50">
 </center>
     <center>
-<img src="IMG-2898.JPG" width="300" height="200" hspace="20">
+<img src="IMG-2898.JPG" width="300" height="200" hspace="50">
 </center>
     <form>
     <button formaction="https://mfnu24.github.io/portfolio/aboutme.html">Click here to go back!</button>
