--- a/aesthetic.html
+++ b/aesthetic.html
@@ -47,8 +47,8 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
+    <img src="sunsetnum1.jpeg" style="width:100%">
+    <img src="sunsetnum1.jpeg" style="width:100%">
     <img src="/w3images/falls2.jpg" style="width:100%">
     <img src="/w3images/paris.jpg" style="width:100%">
     <img src="/w3images/nature.jpg" style="width:100%">
