--- a/aesthetic.html
+++ b/aesthetic.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
+	<html>
+  	<head>
+<link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
+<style>
+      body {
+        font-family: 'Parisienne', cursive;
+      }
+</style>
 <title>
 Mani's Webpage!
 </title>
@@ -8,28 +14,23 @@ Mani's Webpage!
 * {
     box-sizing: border-box;
 }
-
 body {
     margin: 0;
     font-family: Arial;
 }
-
 .header {
     text-align: center;
     padding: 32px;
 }
-
 /* Create two equal columns that floats next to each other */
 .column {
     float: left;
     width: 50%;
     padding: 10px;
 }
-
 .column img {
     margin-top: 12px;
 }
-
 /* Clear floats after the columns */
 .row:after {
     content: "";
@@ -37,21 +38,36 @@ body {
     clear: both;
 }
 </style>
-<body>
+	</head>
+	<body bgcolor="#f2f2f2">
+<center><div><h1>Welcome to the World of Photography</h1></div></center>
 
-<!-- Header -->
-<div class="header">
-  <h1>Image Grid</h1>
-</div>
-
-<!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="sunsetnum1.jpeg" style="width:100%">
-    <img src="sunsetnum1.jpeg" style="width:100%">
+    <img src="sunsetnum1.jpg" style="width:100%">
+    <img src="night.jpg" style="width:100%">
+    <img src="sunsetnum1.jpg" style="width:100%">
+    <img src="/w3images/paris.jpg" style="width:100%">
+    <img src="/w3images/nature.jpg" style="width:100%">
+    <img src="/w3images/mist.jpg" style="width:100%">
+    <img src="/w3images/paris.jpg" style="width:100%">
+  </div>
+<div class="column">
+    <img src="night.jpg" style="width:100%">
+    <img src="sunsetnum1.jpg" style="width:100%">
+    <img src="fire.jpg" style="width:100%">
+    <img src="/w3images/mountainskies.jpg" style="width:100%">
+    <img src="/w3images/rocks.jpg" style="width:100%">
+    <img src="/w3images/underwater.jpg" style="width:100%">
+  </div>  
+  <div class="column">
+    <img src="fire.jpg" style="width:100%">
+    <img src="/w3images/rocks.jpg" style="width:100%">
     <img src="/w3images/falls2.jpg" style="width:100%">
     <img src="/w3images/paris.jpg" style="width:100%">
     <img src="/w3images/nature.jpg" style="width:100%">
     <img src="/w3images/mist.jpg" style="width:100%">
     <img src="/w3images/paris.jpg" style="width:100%">
   </div>
+	</body>
+	</html>
